force-app/main/default/objects/Bike_Inventory__c/Bike_Inventory__c.object-meta.xml
<CustomObject>
    <label>Bike Inventory</label>
    <nameField>
        <label>Bike Inventory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bike Inventories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>