force-app/main/default/objects/Bike_Inventory__c/fields/Bike__c.field-meta.xml
<CustomField>
    <fullName>Bike__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bike</label>
    <referenceTo>Bike__c</referenceTo>
    <relationshipLabel>Bike Inventories</relationshipLabel>
    <relationshipName>Bike_Inventories</relationshipName>
    <type>Lookup</type>
</CustomField>