force-app/main/default/objects/Bike_Inventory__c/fields/Reorder_Point__c.field-meta.xml
<CustomField>
    <fullName>Reorder_Point__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Reorder Point</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>